--- a/Fractal.vcxproj.filters
+++ b/Fractal.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="Fractal.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -69,6 +66,7 @@
     <None Include="res\cursor1.cur">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\FractalDoc.ico">
